# proto-deux

./: .gitignore  Cargo.toml  README.md  proto-rust.code-workspace  test.js
analysis_js/: package-lock.json  package.json  process_fitness.js
src/: main.rs  perf.rs  runners.rs
src/biology/: mod.rs  sensor_manifest.rs
src/biology/experiments/: alterations.rs  builders.rs  fitness.rs  logging.rs  mod.rs  notes.txt  sim_runner.rs  types.rs  util.rs
src/biology/genetic_manifest/: mod.rs  predicates.rs
src/biology/genome/: mod.rs
src/biology/phenotype/: mod.rs
src/biology/unit_behavior/: mod.rs
src/chemistry/: builder.rs  cheese.rs  config.rs  lever.rs  manifest.rs  mod.rs  nanobots.rs  properties.rs  reactions.rs  simple.rs
src/chemistry/actions/: mod.rs  tests.rs
src/chemistry/helpers/: mod.rs  phenotype_execution.rs  place_units.rs  resource_allocation.rs  unit_behavior_execution.rs
src/chemistry/manifest/: mod.rs  serialize.rs
src/chemistry/variants/: base.rs  cheese.rs  foo.rs  lever.rs  mod.rs  nanobots.rs  simple.rs
src/examples/: basic_sim_ui.rs
src/fixtures/: mod.rs
src/launches/: mod.rs
src/runners/: mod.rs
src/runners/exp_replay/: mod.rs
src/scenarios/: mod.rs  simulations.rs  unit_entries.rs
src/simulation/: common.rs  config.rs  coord_set.rs  fitness.rs  iterators.rs  mod.rs  position.rs  simulation_data.rs  unit.rs  unit_entry.rs  world.rs
src/tests/: experiments.rs  fps.rs  mod.rs  perf.rs
src/ui/: board.rs  colors.rs  event_loop.rs  execute.rs  mod.rs
src/util/: cli.rs  macros.rs  macros_temp.rs  mod.rs  text_grid.rs
(+80 files in other folders)
