[package]
authors = ["Alan Jones <erem.zeit@gmail.com>"]
name = "proto-rust"
version = "0.1.0"

[dependencies]
chrono = "0.4.9"
derive_builder = "0.9.0"
find_folder = "0.3.0"
image = "0.22"
log4rs = "^0.12.0"
pad = "0.1"
palette = "0.5"
petgraph = "0.4"
piston2d-graphics = "0.37"
rand = "0.8.3"
roaring = "0.5.0"
serde_json = "1.0.40"
typemap = "0.3.3"

gfx_device_gl = "0.16.2"

conrod_derive = "0.70.0"
pistoncore-input = "1.0.0"

conrod_core = "0.73"
piston_window = "0.113"

ndarray = {version = "0.13.0", features = ["rayon"]}
