[package]
edition = "2021"
name = "proto_deux"
version = "0.1.0"

[dependencies]
chrono = "0.4.9"
derive_builder = "0.9.0"
find_folder = "0.3.0"
image = "0.24.3"
log4rs = "^0.12.0"
ndarray = {version = "0.13.0", features = ["rayon"]}
pad = "0.1"
palette = "0.5"
petgraph = "0.4"
rand = "0.8.3"
roaring = "0.5.0"
typemap = "0.3.3"

fps_counter = "1.0.0"
gfx = "0.18.1"
gfx_device_gl = "0.16.2"
piston_window = "0.123.0"
shader_version = "0.7.0"
vecmath = "1.0.0"

clap = {version = "3.2.16", features = ["derive"]}
once_cell = "1.13.1"
piston2d-opengl_graphics = "0.81.0"

ron = "0.8"
serde = {version = "1.0.144", features = ["derive"]}
threadpool = "1.8.1"

[features]
skip_genome_stats = []
